[package]
name = "pastex"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
anyhow = "1.0"
dolmen = { path = "../../dolmen/dolmen" }
dolmen_dsl = { path = "../../dolmen/dolmen-dsl" }
log = "0.4"
nom = "7"
once_cell = "1.9"
pastex_parser = { path = "../pastex_parser" }
pretty_env_logger = "0.4"
